[package]
name = "graphics"
version = "0.1.0"
authors = ["Grégoire Charvet 黑瓜 <greg@geekingfrog.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
rand = {version = "0.7.3", features = ["small_rng"]}
num-traits = "0.2.11"
num-complex = "0.2"
rayon = "1.3"

# pacman -S sdl2 sdl2_image
sdl2 = {version = "0.34", features = ["image"]}
